.archived/kubernetes/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: cilium.svg
    gethomepage.dev/name: hubble
    gethomepage.dev/group: Observability
spec:
  hostnames: ["hubble.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: kube-system

  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
